argocd/manifests/linkding/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/managed-by: argocd
