argocd/manifests/linkding/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  labels:
    app: linkding
    app.kubernetes.io/name: linkding
spec:
  type: ClusterIP
  selector:
    app: linkding
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
